Changes since labca_3_4_1:
Changes since labca_3_4:
	2013/06/25 (TS):
	- FIXED: build problems due to changed scilab libraries when going
	  from scilab-5.3 to 5.4. Thanks to Takashi Obina for reporting and
	  suggesting a fix.
	- documentation/xmlhelp/en_US/Error.xml no longer passed through
	  xml_to_jar. Removed <titleabbrev> and replaced <thead> by <th>.
Changes since labca_3_3:
	2012/01/13 (TS):
	- glue/ezcaSciInt.c: removed epicsShareAPI for C2F(ezca). This caused
	  a leading underscore (when building w/o .def file as we now do) which
	  is not understood by scilab's addinter.
	- glue/Makefile: (WIN) add dependency libraries to TARGET_LDFLAGS instead
	  of LIB_LIBS + <xxx>_DIR. This works around problems if the library path
	  contains blanks.
	- README.win32pathwithblanks: updated info.
	- documentation/Makefile: use portable workaround for mkdir -p
	  (w/o causing errors if target dir is already present).
	2012/01/12 (TS):
	- glue/Makefile: re-enabled mx_DIR + friends (non-windows only)
	- matlab/lcaSetMonitor.c, matlab/lcaNewMonitorWait.c,
	  matlab/lcaNewMonitorValue.c: removed unused 'i' variable.
	- matlab/Makefile: enable warnings for MEX compiler (linux).
	- testing/Makefile: always build lcaTest.m (even under scilab) so that
	  it is present for distribution.
	- ReleaseNotes: updated.
	- glue/Makefile:
	   o win32/64 scilab-5 needs 'output_stream' and 'intersci'
	     libraries in addition to LibScilab :-(. Manual intervention is
	     needed to build for scilab-4 (define SCILAB_V4 makefile variable).
	   o Commented unused library paths (libmx_DIR + friends).
	   o Use 'psed' (perl) instead of 'sed' and use double quotes for
	     sake of win-non-cygwin portability.
	   o Use 'vpath' instead of symlink to find sciclean.c for sake
	     of win-non-cygwin portability.
	2012/01/11 (TS):
	- glue/ctrlC-polled.c: scilab-5 seems to properly export + declare
	  'basbrk' (even under windows) so we use it.