@@ -1,4 +1,6 @@
 Changes since labca_3_4_1:
+	2015/03/12 (TS):
+	- Applied fixes for matlab 2014a contributed by Matthew Furseman.
 Changes since labca_3_4:
 	2013/06/25 (TS):
 	- FIXED: build problems due to changed scilab libraries when going
